# ContinuityBreakDetector

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: test.yml
continuity_break_detector/: __init__.py  batch_prediction.py  batch_prediction_runner.py  config.py  demo.py  forecast_client.py  forecast_daemon_client.py  main.py  ml_break_analysis.py  ml_break_analysis_runner.py  ml_daemon_predict_runner.py  ml_predict_runner.py  ml_worker_runner.py  ml_workers.py  prediction_schema.py  series_prediction.py  series_prediction_runner.py
continuity_break_detector/agents/: __init__.py  artifact_context.py  config.py  lemonade.py  lemonade_debug_runner.py  memory.py  prompts.py  runner.py
continuity_break_detector/backtesting/: __init__.py  anomalies.py  artifact_runner.py  artifacts.py  audit.py  audit_runner.py  domains.py  engine.py  models.py  ranking.py  ranking_runner.py  runner.py  study.py  study_discovery.py
continuity_break_detector/forecasting/: __init__.py  advanced_backtest.py  availability.py  base.py  registry.py  runner.py  subprocess_client.py
continuity_break_detector/forecasting/adapters/: __init__.py  chronos_adapter.py  deterministic_adapter.py  timesfm_adapter.py
continuity_break_detector/forecasting/workers/: __init__.py  chronos_worker.py  timesfm_worker.py
continuity_break_detector/ingestion/: __init__.py  runner.py
continuity_break_detector/normalization/: __init__.py  arxiv.py  crossref.py  models.py  openalex.py  owid.py  runner.py  world_bank.py
continuity_break_detector/publication/: __init__.py  paper.py  runner.py
continuity_break_detector/sources/: __init__.py  arxiv.py  base.py  crossref.py  openalex.py  owid.py  registry.py  world_bank.py
continuity_break_detector/statistics/: __init__.py  breaks.py  features.py  runner.py
continuity_break_detector/storage/: __init__.py  parquet.py  sqlite.py
continuity_break_detector/utils/: __init__.py  http.py  logging.py  paths.py
docker/chronos/: Dockerfile  predict.py  smoke_test.py  worker_ready.py
docker/timesfm/: Dockerfile  daemon.py  predict.py  smoke_test.py  worker_ready.py
docs/: architecture.md  case_study_known_shocks.md  data_sources.md  ml_architecture.md  ml_quickstart.md  phase5_1_local_forecaster_diagnostics.md  phase5_implementation_plan.md  publication_notes.md  reproducibility.md  roadmap.md  scoring.md  sources_connection_detail.md  worker_contract.md
examples/: batch_series.json  sample_artifact_audit.json  sample_report.md  sample_summary.json  series.json
examples/demo_raw/: demo_indicators.csv
publication/: detecting-global-continuity-breaks.md
tests/: test_agents_artifact_context.py  test_agents_lemonade.py  test_agents_memory.py  test_agents_prompts.py  test_backtesting_artifacts.py  test_backtesting_audit.py  test_backtesting_models.py  test_backtesting_outputs.py  test_backtesting_ranking.py  test_batch_prediction.py  test_demo_study.py  test_forecast_client.py  test_forecast_daemon_client.py  test_forecasting_phase5.py  test_integration_pipeline.py  test_ml_break_analysis.py  test_ml_daemon_predict_cli.py  test_ml_predict_cli.py  test_ml_workers.py  test_normalization_openalex.py  test_normalization_world_bank.py  test_owid.py  test_prediction_schema.py  test_publication_paper.py  test_registry.py  test_series_prediction.py  test_statistics.py  test_storage.py  test_worker_daemon_scripts.py  test_worker_predict_scripts.py  test_world_bank.py
