[project]
name = "continuity-break-detector"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "httpx",
  "numpy",
  "pandas",
  "pyarrow",
]

[project.scripts]
cbd = "continuity_break_detector.main:main"

[project.optional-dependencies]
test = [
  "pytest",
  "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-s"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
