[project]
name = "continuity-break-detector"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27,<1",
  "numpy>=1.26,<3",
  "pandas>=2.2,<4",
  "pyarrow>=15,<25",
]

[project.scripts]
cbd = "continuity_break_detector.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["continuity_break_detector*"]

[project.optional-dependencies]
test = [
  "mypy",
  "pytest",
  "pytest-cov",
  "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-s"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = false
no_strict_optional = false

[[tool.mypy.overrides]]
module = [
  "continuity_break_detector.backtesting.*",
  "continuity_break_detector.forecasting.*",
  "continuity_break_detector.statistics.*",
]
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
  "continuity_break_detector.agents.*",
  "continuity_break_detector.sources.*",
]
ignore_errors = true
